--- a/timeline/sample.html
+++ b/timeline/sample.html
@@ -3,6 +3,7 @@
 	<link rel="stylesheet" type="text/css" href="../main/style.css">
 	<link rel="stylesheet" type="text/css" href="../conversation/style.css">
 	<script src="scripts.js"></script>
+    <meta media="screen and (max-width: 640px)" name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 
 <div class="artifact">
