simplify some redundant framework copy pasta and tweak UI

--- a/timeline/sample.html
+++ b/timeline/sample.html
@@ -6,119 +6,344 @@
     <meta media="screen and (max-width: 640px)" name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 
-<div class="artifact">
+<div class="section">
+	<div class="title">Section Title</div>
 	<div class="contents">
-		<div class="date">
-			<b>Sat, Apr 6,</b> 1:56 PM
-		</div>
-		<div class="message-group recieved">
-			<div class="message">
-				GUESS WHAT.
+		<div class="artifact">
+			<div class="contents">
+				<div class="message-date">
+					<b>Sat, Apr 6,</b> 1:56 PM
+				</div>
+				<div class="message-group recieved">
+					<div class="message">
+						GUESS WHAT.
+					</div>
+				</div>
+				<div class="message-group sent">
+					<div class="message">
+						Fun :)<br/>
+						<br/>
+						WHAT??
+					</div>
+				</div>
+				<div class="message-group recieved">
+					<div class="message">
+						THEY ARE EXPANDING FANTASY LAND.
+					</div>
+				</div>
+				<div class="message-group sent">
+					<div class="message">
+						NO WAY!!!!! :O
+					</div>
+				</div>
+				<div class="message-group recieved">
+					<div class="message">
+						YES WAY!!!!
+					</div>
+					<div class="message">
+						AHHHHH!!!!!!
+					</div>
+				</div>
+			</div>
+			<div class="caption">
+				<div class="title">title</div>
+				<div class="date">May 12, 1995</div>
+				<div class="details">detailed description</div>
 			</div>
 		</div>
-		<div class="message-group sent">
-			<div class="message">
-				Fun :)<br/>
-				<br/>
-				WHAT??
+
+		<div class="artifact">
+			<div class="caption">
+				<div class="title">title</div>
+				<div class="date">May 12, 1995</div>
+				<div class="details">detailed description</div>
 			</div>
 		</div>
-		<div class="message-group recieved">
-			<div class="message">
-				THEY ARE EXPANDING FANTASY LAND.
+
+		<div class="artifact">
+			<div class="contents">
+				<div class="message-date">
+					<b>Sat, Apr 6,</b> 1:56 PM
+				</div>
+				<div class="message-group recieved">
+					<div class="message">
+						GUESS WHAT.
+					</div>
+				</div>
+				<div class="message-group sent">
+					<div class="message">
+						Fun :)<br/>
+						<br/>
+						WHAT??
+					</div>
+				</div>
+				<div class="message-group recieved">
+					<div class="message">
+						THEY ARE EXPANDING FANTASY LAND.
+					</div>
+				</div>
+				<div class="message-group sent">
+					<div class="message">
+						NO WAY!!!!! :O
+					</div>
+				</div>
+				<div class="message-group recieved">
+					<div class="message">
+						YES WAY!!!!
+					</div>
+					<div class="message">
+						AHHHHH!!!!!!
+					</div>
+				</div>
 			</div>
 		</div>
-		<div class="message-group sent">
-			<div class="message">
-				NO WAY!!!!! :O
+
+		<div class="artifact">
+			<div class="contents">
+				<div class="darkbox">
+					<img src="res/1.jpg"/>
+				</div>
+			</div>
+			<div class="caption">
+				<div class="title">title</div>
+				<div class="date">May 12, 1995</div>
+				<div class="details">detailed description</div>
 			</div>
 		</div>
-		<div class="message-group recieved">
-			<div class="message">
-				YES WAY!!!!
+
+		<div class="artifact">
+			<div class="contents">
+				<div class="message-date">
+					<b>Sat, Apr 6,</b> 1:56 PM
+				</div>
+				<div class="message-group recieved">
+					<div class="message">
+						GUESS WHAT.
+					</div>
+				</div>
+				<div class="message-group sent">
+					<div class="message">
+						Fun :)<br/>
+						<br/>
+						WHAT??
+					</div>
+				</div>
+				<div class="message-group recieved">
+					<div class="message">
+						THEY ARE EXPANDING FANTASY LAND.
+					</div>
+				</div>
+				<div class="message-group sent">
+					<div class="message">
+						NO WAY!!!!! :O
+					</div>
+				</div>
+				<div class="message-group sent">
+					<div class="message">
+						double text
+					</div>
+					<div class="message">
+						double text part 2
+					</div>
+				</div>
+				<div class="message-group recieved">
+					<div class="message">
+						YES WAY!!!!
+					</div>
+					<div class="message">
+						AHHHHH!!!!!!
+					</div>
+				</div>
+				<div class="message-group sent">
+					<div class="message">
+						OMG YAY!!!!!!!!!
+					</div>
+					<div class="message">
+						...what in the world are we talking about?
+					</div>
+					<div class="message">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce at nisi at tortor volutpat consequat. Ut tristique lacinia quam, et hendrerit libero vehicula eget. Proin ex purus, consequat vitae ipsum non, cursus aliquam velit. Vivamus sit amet cursus nisi. Etiam lacinia porttitor ipsum ac suscipit. Proin at metus non dolor vulputate lacinia. Fusce eros ante, tempus ut nibh ut, aliquet pharetra lectus. Sed efficitur gravida augue vel pharetra. Etiam quis leo porttitor, ornare eros ut, feugiat nulla. Vestibulum facilisis turpis vitae eleifend euismod. Aenean auctor maximus leo eget condimentum.<br/>
+						<br/>
+						Nunc scelerisque est ac mauris fringilla convallis. Quisque condimentum mauris nec dolor feugiat cursus. Nam aliquam tortor quis metus pretium hendrerit. Nullam non magna condimentum, convallis lorem non, dignissim lorem. Aenean enim ex, dapibus non est eget, ultrices efficitur felis. Nunc aliquam massa sit amet vehicula semper. Sed blandit turpis massa, vitae tincidunt odio dapibus at. Etiam ut dolor sed enim lobortis pharetra sed ac lectus. Nullam pellentesque blandit tellus, sed sodales sem tempus eu. In ultrices venenatis urna, eget commodo enim.
+					</div>
+				</div>
 			</div>
-			<div class="message">
-				AHHHHH!!!!!!
+			<div class="caption">
+				<div class="title">title</div>
+				<div class="date">May 12, 1995</div>
+				<div class="details">detailed description</div>
 			</div>
 		</div>
-	</div>
-	<div class="caption">
-		<b>title</b>
-		<div>detailed description</div>
 	</div>
 </div>
 
-<div class="artifact">
+<div class="section">
+	<div class="title">Section Title</div>
 	<div class="contents">
-		<div class="darkbox">
-			<img src="res/1.jpg"/>
+		<div class="artifact">
+			<div class="contents">
+				<div class="message-date">
+					<b>Sat, Apr 6,</b> 1:56 PM
+				</div>
+				<div class="message-group recieved">
+					<div class="message">
+						GUESS WHAT.
+					</div>
+				</div>
+				<div class="message-group sent">
+					<div class="message">
+						Fun :)<br/>
+						<br/>
+						WHAT??
+					</div>
+				</div>
+				<div class="message-group recieved">
+					<div class="message">
+						THEY ARE EXPANDING FANTASY LAND.
+					</div>
+				</div>
+				<div class="message-group sent">
+					<div class="message">
+						NO WAY!!!!! :O
+					</div>
+				</div>
+				<div class="message-group recieved">
+					<div class="message">
+						YES WAY!!!!
+					</div>
+					<div class="message">
+						AHHHHH!!!!!!
+					</div>
+				</div>
+			</div>
+			<div class="caption">
+				<div class="title">title</div>
+				<div class="date">May 12, 1995</div>
+				<div class="details">detailed description</div>
+			</div>
 		</div>
-	</div>
-	<div class="caption">
-		<b>title</b>
-		<div>detailed description</div>
-	</div>
-</div>
 
-<div class="artifact">
-	<div class="contents">
-		<div class="date">
-			<b>Sat, Apr 6,</b> 1:56 PM
-		</div>
-		<div class="message-group recieved">
-			<div class="message">
-				GUESS WHAT.
+		<div class="artifact">
+			<div class="caption">
+				<div class="title">title</div>
+				<div class="date">May 12, 1995</div>
+				<div class="details">detailed description</div>
 			</div>
 		</div>
-		<div class="message-group sent">
-			<div class="message">
-				Fun :)<br/>
-				<br/>
-				WHAT??
+
+		<div class="artifact">
+			<div class="contents">
+				<div class="message-date">
+					<b>Sat, Apr 6,</b> 1:56 PM
+				</div>
+				<div class="message-group recieved">
+					<div class="message">
+						GUESS WHAT.
+					</div>
+				</div>
+				<div class="message-group sent">
+					<div class="message">
+						Fun :)<br/>
+						<br/>
+						WHAT??
+					</div>
+				</div>
+				<div class="message-group recieved">
+					<div class="message">
+						THEY ARE EXPANDING FANTASY LAND.
+					</div>
+				</div>
+				<div class="message-group sent">
+					<div class="message">
+						NO WAY!!!!! :O
+					</div>
+				</div>
+				<div class="message-group recieved">
+					<div class="message">
+						YES WAY!!!!
+					</div>
+					<div class="message">
+						AHHHHH!!!!!!
+					</div>
+				</div>
 			</div>
 		</div>
-		<div class="message-group recieved">
-			<div class="message">
-				THEY ARE EXPANDING FANTASY LAND.
+
+		<div class="artifact">
+			<div class="contents">
+				<div class="darkbox">
+					<img src="res/1.jpg"/>
+				</div>
+			</div>
+			<div class="caption">
+				<div class="title">title</div>
+				<div class="date">May 12, 1995</div>
+				<div class="details">detailed description</div>
 			</div>
 		</div>
-		<div class="message-group sent">
-			<div class="message">
-				NO WAY!!!!! :O
+
+		<div class="artifact">
+			<div class="contents">
+				<div class="message-date">
+					<b>Sat, Apr 6,</b> 1:56 PM
+				</div>
+				<div class="message-group recieved">
+					<div class="message">
+						GUESS WHAT.
+					</div>
+				</div>
+				<div class="message-group sent">
+					<div class="message">
+						Fun :)<br/>
+						<br/>
+						WHAT??
+					</div>
+				</div>
+				<div class="message-group recieved">
+					<div class="message">
+						THEY ARE EXPANDING FANTASY LAND.
+					</div>
+				</div>
+				<div class="message-group sent">
+					<div class="message">
+						NO WAY!!!!! :O
+					</div>
+				</div>
+				<div class="message-group sent">
+					<div class="message">
+						double text
+					</div>
+					<div class="message">
+						double text part 2
+					</div>
+				</div>
+				<div class="message-group recieved">
+					<div class="message">
+						YES WAY!!!!
+					</div>
+					<div class="message">
+						AHHHHH!!!!!!
+					</div>
+				</div>
+				<div class="message-group sent">
+					<div class="message">
+						OMG YAY!!!!!!!!!
+					</div>
+					<div class="message">
+						...what in the world are we talking about?
+					</div>
+					<div class="message">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce at nisi at tortor volutpat consequat. Ut tristique lacinia quam, et hendrerit libero vehicula eget. Proin ex purus, consequat vitae ipsum non, cursus aliquam velit. Vivamus sit amet cursus nisi. Etiam lacinia porttitor ipsum ac suscipit. Proin at metus non dolor vulputate lacinia. Fusce eros ante, tempus ut nibh ut, aliquet pharetra lectus. Sed efficitur gravida augue vel pharetra. Etiam quis leo porttitor, ornare eros ut, feugiat nulla. Vestibulum facilisis turpis vitae eleifend euismod. Aenean auctor maximus leo eget condimentum.<br/>
+						<br/>
+						Nunc scelerisque est ac mauris fringilla convallis. Quisque condimentum mauris nec dolor feugiat cursus. Nam aliquam tortor quis metus pretium hendrerit. Nullam non magna condimentum, convallis lorem non, dignissim lorem. Aenean enim ex, dapibus non est eget, ultrices efficitur felis. Nunc aliquam massa sit amet vehicula semper. Sed blandit turpis massa, vitae tincidunt odio dapibus at. Etiam ut dolor sed enim lobortis pharetra sed ac lectus. Nullam pellentesque blandit tellus, sed sodales sem tempus eu. In ultrices venenatis urna, eget commodo enim.
+					</div>
+				</div>
+			</div>
+			<div class="caption">
+				<div class="title">title</div>
+				<div class="date">May 12, 1995</div>
+				<div class="details">detailed description</div>
 			</div>
 		</div>
-		<div class="message-group sent">
-			<div class="message">
-				double text
-			</div>
-			<div class="message">
-				double text part 2
-			</div>
-		</div>
-		<div class="message-group recieved">
-			<div class="message">
-				YES WAY!!!!
-			</div>
-			<div class="message">
-				AHHHHH!!!!!!
-			</div>
-		</div>
-		<div class="message-group sent">
-			<div class="message">
-				OMG YAY!!!!!!!!!
-			</div>
-			<div class="message">
-				...what in the world are we talking about?
-			</div>
-			<div class="message">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce at nisi at tortor volutpat consequat. Ut tristique lacinia quam, et hendrerit libero vehicula eget. Proin ex purus, consequat vitae ipsum non, cursus aliquam velit. Vivamus sit amet cursus nisi. Etiam lacinia porttitor ipsum ac suscipit. Proin at metus non dolor vulputate lacinia. Fusce eros ante, tempus ut nibh ut, aliquet pharetra lectus. Sed efficitur gravida augue vel pharetra. Etiam quis leo porttitor, ornare eros ut, feugiat nulla. Vestibulum facilisis turpis vitae eleifend euismod. Aenean auctor maximus leo eget condimentum.<br/>
-				<br/>
-				Nunc scelerisque est ac mauris fringilla convallis. Quisque condimentum mauris nec dolor feugiat cursus. Nam aliquam tortor quis metus pretium hendrerit. Nullam non magna condimentum, convallis lorem non, dignissim lorem. Aenean enim ex, dapibus non est eget, ultrices efficitur felis. Nunc aliquam massa sit amet vehicula semper. Sed blandit turpis massa, vitae tincidunt odio dapibus at. Etiam ut dolor sed enim lobortis pharetra sed ac lectus. Nullam pellentesque blandit tellus, sed sodales sem tempus eu. In ultrices venenatis urna, eget commodo enim.
-			</div>
-		</div>
-	</div>
-	<div class="caption">
-		<b>title</b>
-		<div>detailed description</div>
 	</div>
 </div>
