--- a/public_html/site.html
+++ b/public_html/site.html
@@ -25,7 +25,7 @@
         </div>
     </div>
     <div id="content">
-        <div class="page transparent display_none" id="rsvp_page">
+        <div class="page jsh_transparent jsh_display_none" id="home_page">
             <div id="rsvp_text">
               rsvp
             </div>
