--- a/public_html/site.html
+++ b/public_html/site.html
@@ -17,6 +17,7 @@
         <div id="mobile_nav_button"></div>
         <div id="nav_inner">
             <div class="nav_item">rsvp</div>
+            <div class="nav_item">registry</div>
             <div id="right_aligned_buttons">
                 <a href="https://google.com/">
                     <div class="nav_item">google.com</div>
@@ -25,9 +26,15 @@
         </div>
     </div>
     <div id="content">
-        <div class="page jsh_transparent jsh_display_none" id="home_page">
+        <div class="page jsh_transparent jsh_display_none" id="rsvp_page">
             <div id="rsvp_text">
               rsvp
+            </div>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSetJKkJKqx0WdeBUD0KlLNQfDxmxlxtLvvc9lkji9oBjvwIxA/viewform?embedded=true" width="100%" height="750" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        </div>
+        <div class="page jsh_transparent jsh_display_none" id="registry_page">
+            <div id="rsvp_text">
+              registry
             </div>
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSetJKkJKqx0WdeBUD0KlLNQfDxmxlxtLvvc9lkji9oBjvwIxA/viewform?embedded=true" width="100%" height="750" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
         </div>
