--- a/site.html
+++ b/site.html
@@ -18,22 +18,27 @@
         <div id="nav_inner">
             <div class="nav_item">rsvp</div>
             <div class="nav_item">registry</div>
-            <div id="right_aligned_buttons">
+            <!-- <div id="right_aligned_buttons">
                 <a href="https://google.com/">
                     <div class="nav_item">google.com</div>
                 </a>
-            </div>
+            </div> -->
         </div>
     </div>
     <div id="content">
         <div class="page jsh_transparent jsh_display_none" id="rsvp_page">
-            <div id="rsvp_text">
+            <div class="title_text">
               rsvp
             </div>
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSetJKkJKqx0WdeBUD0KlLNQfDxmxlxtLvvc9lkji9oBjvwIxA/viewform?embedded=true" width="100%" height="750" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
         </div>
         <div class="page jsh_transparent jsh_display_none" id="registry_page">
+          <div class="title_text">
             registry
+          </div>
+          <div class="sub_text">
+            This page is coming soon. Thank you for your patience!
+          </div>
         </div>
     </div>
 </body>
