--- a/site.html
+++ b/site.html
@@ -37,8 +37,13 @@
             registry
           </div>
           <div class="sub_text">
-            This page is coming soon. Thank you for your patience!
+            Thank you so much for considering a gift! You will be helping us start a collection of dinnerware to always remember this day by. <br/>
+            <br>
+            Follow the link below to see what we picked out!<br/>
           </div>
+	  <a target="_blank" href="https://www.myregistry.com/wedding-registry/Sarah-Beckwith-and-Joshua-Diaddigo-Ball-Ground-GA/2028071?p=43644.6361846991">
+	    <span class="registry-button">go to registry →</span>
+          </a>
         </div>
     </div>
 </body>
